update docker file for the microservices

--- a/UserRegisteration/Dockerfile
+++ b/UserRegisteration/Dockerfile
@@ -2,16 +2,14 @@ FROM adoptopenjdk/maven-openjdk11
 
 WORKDIR /apps
 
-#COPY . .
-
-#RUN mvn clean install
-
-#CMD mvn spring-boot:run
-
 COPY ./target/*.jar /apps/
 
 ENV USER_PORT=7070
 
 EXPOSE ${USER_PORT}
 
-CMD "java" "-jar" "UserRegisteration-0.0.1-SNAPSHOT.jar"
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
+
+RUN chmod +x /wait
+
+CMD /wait && "java" "-jar" "UserRegisteration-0.0.1-SNAPSHOT.jar"
