--- a/helloworld/Dockerfile
+++ b/helloworld/Dockerfile
@@ -1,14 +1,15 @@
 FROM adoptopenjdk/maven-openjdk11
 
 WORKDIR /apps
-#COPY . .
 
-#RUN mvn clean install
-#CMD mvn spring-boot:run
 COPY ./target/*.jar /apps/
 
 ENV HELLOWORLD_PORT=6060
 
 EXPOSE ${HELLOWORLD_PORT}
 
-CMD "java" "-jar" "helloworld-0.0.1-SNAPSHOT.jar"
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
+
+RUN chmod +x /wait
+
+CMD /wait && "java" "-jar" "helloworld-0.0.1-SNAPSHOT.jar"
