--- a/demogateway/Dockerfile
+++ b/demogateway/Dockerfile
@@ -4,14 +4,11 @@ EXPOSE 8081
 
 WORKDIR /apps
 
-#COPY . .
-
-#RUN mvn clean install
-
-#CMD mvn spring-boot:run
-
 COPY ./target/*.jar /apps/
 
 EXPOSE ${GATEWAY_PORT}
 
-CMD "java" "-jar" "demogateway-0.0.1-SNAPSHOT.jar"
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
+RUN chmod +x /wait
+
+CMD /wait && "java" "-jar" "demogateway-0.0.1-SNAPSHOT.jar"
