--- a/docker-compose-ELK.yml
+++ b/docker-compose-ELK.yml
@@ -31,12 +31,12 @@ services:
       - "5601:5601"
     depends_on:
       - elasticsearch
-
       
   userregister:
     container_name: userRegister
     build: ./UserRegisteration/
     environment:
+      WAIT_HOSTS: logstash:5000
       USER_PORT: ${USER_PORT}
     ports:
       - ${USER_PORT}:${USER_PORT}
@@ -48,6 +48,7 @@ services:
     container_name: helloWorld
     build: ./helloworld/
     environment:
+      WAIT_HOSTS: logstash:5000
       HELLOWORLD_PORT: ${HELLOWORLD_PORT}
     ports:
       - ${HELLOWORLD_PORT}:${HELLOWORLD_PORT}
@@ -59,6 +60,7 @@ services:
     container_name: app-gateway
     build: ./demogateway/
     environment:
+      WAIT_HOSTS: logstash:5000
       HELLO_URL: ${HELLO_URL}
       USER_URL: ${USER_URL}
       GATEWAY_PORT: ${GATEWAY_PORT}
