--- a/kubernetes/gateway-deployment-service.yaml
+++ b/kubernetes/gateway-deployment-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gateway-deployment
+  name: gateway
 spec:
   replicas: 2
   selector:
@@ -18,7 +18,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: GATEWAY_PORT
-              value: '8080'
+              value: '8081'
             - name: USER_URL
               value: 'user-service.default'
             - name: HELLO_URL
@@ -27,12 +27,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: gateway-service
+  name: gateway
 spec:
   selector:
-    app: gateway 
-  type: LoadBalancer  
+    app: gateway
   ports:
-  - port: 8080
-    targetPort: 8080
+  - port: 8081
+    targetPort: 8081
     protocol: TCP
