--- a/kubernetes/kibana.yaml
+++ b/kubernetes/kibana.yaml
@@ -1,9 +1,44 @@
-apiVersion: kibana.k8s.elastic.co/v1
-kind: Kibana
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: transit
+  name: kibana
+  labels:
+    app: kibana
 spec:
-  version: 7.9.2
-  count: 1
-  elasticsearchRef:
-    name: transit
+  replicas: 1
+  selector:
+    matchLabels:
+      app: kibana
+  template:
+    metadata:
+      labels:
+        app: kibana
+    spec:
+      containers:
+      - name: kibana
+        image: docker.elastic.co/kibana/kibana:7.2.0
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 1Gi
+          requests:
+            cpu: 100m
+        env:
+          - name: ELASTICSEARCH_URL
+            value: http://elasticsearch:9200
+        ports:
+        - containerPort: 5601
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kibana
+  labels:
+    app: kibana
+spec:
+  selector:
+    app: kibana
+  ports:
+  - port: 5601
+    targetPort: 5601
+    
